# rust-fib-server

./: Cargo.toml
.github/workflows/: push-package.yml  rust.yml  vite.yml
backend/: Cargo.toml  Dockerfile  docker-compose.yml  rustfmt.toml
backend/src/: main.rs
backend/src/server_math/: factorial.rs  fibonacci.rs  mod.rs  req_resp.rs  store.rs
frontend/: .env  Dockerfile  README.md  jest.config.cjs  nginx.conf  package-lock.json  package.json  tsconfig.test.json
frontend/coverage/: clover.xml  coverage-final.json  lcov.info
frontend/coverage/lcov-report/: Calculator.tsx.html  index.html  video.tsx.html
frontend/src/: App.tsx  config.ts  setupTests.ts
frontend/src/__mocks__/: config.ts
frontend/src/config/: env.ts
frontend/src/pages/: Calculator.test.tsx  Calculator.tsx  Factorial.test.tsx  Factorial.tsx  video.test.tsx  video.tsx
src/: main.rs
