[package]
name = "server_devops"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-http = "3.9.0"
actix-cors = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
tracing-actix-web = "0.7"
tracing = "0.1"
log = "0.4"
env_logger = "0.11.6"
num-traits = "0.2.19"
num-bigint = { version = "0.4.6", features = ["serde"] }
redis = "0.27.6"

